--- a/cms/cms/templates/index.html
+++ b/cms/cms/templates/index.html
@@ -41,7 +41,7 @@
 
 
 <div id="contentBox">
-
+    <label>{{ msg }}</label>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" id="myTabs">
         {% if request.path_info == '/login.html' or request.path_info == '/index.html' %}
